syntax = "proto3";
option go_package = "./protobuf";

message  AccessRecordsToInfluxDB{
  string user_name = 1;
  string domain = 2;
  string ip = 3;
  string proxy_type = 4;
}